--- a/src/sample/design/aboutPage.fxml
+++ b/src/sample/design/aboutPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="400" maxWidth="600"" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="538.0" style="-fx-background-color: #347597;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.AboutController">
+<AnchorPane maxHeight="400" maxWidth="600" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="538.0" style="-fx-background-color: #347597;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.AboutController">
    <children>
       <AnchorPane prefHeight="59.0" prefWidth="539.0" style="-fx-background-color: #2B6887;">
          <effect>
