--- a/src/sample/design/profilePage.fxml
+++ b/src/sample/design/profilePage.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="400" maxWidth="600" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="538.0" style="-fx-background-color: #347597;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="400" maxWidth="600" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="538.0" style="-fx-background-color: #347597;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.ProfileController">
    <children>
       <AnchorPane prefHeight="59.0" prefWidth="539.0" style="-fx-background-color: #2B6887;">
          <effect>
             <DropShadow />
          </effect>
          <children>
-            <Label layoutX="192.0" layoutY="17.0" prefHeight="23.0" prefWidth="330.0" text="\%player.name% : %player.score%" textFill="WHITE">
+            <Label fx:id="nameAndScore" layoutX="192.0" layoutY="17.0" prefHeight="23.0" prefWidth="330.0" text="\%player.name% : %player.score%" textFill="WHITE">
                <font>
                   <Font name="Yu Gothic Medium" size="21.0" />
                </font>
@@ -38,42 +38,42 @@
             <Line endX="100.0" layoutX="72.0" layoutY="58.0" startX="-100.0" stroke="WHITE" />
             <VBox layoutX="2.0" layoutY="59.0" prefHeight="339.0" prefWidth="170.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Find a game" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Create a game" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Rating" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="FAQs" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="About developer" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Profile" textFill="WHITE">
+                  <Button fx:id="findBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Find a game" textFill="WHITE" />
+                  <Button fx:id="createBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Create a game" textFill="WHITE" />
+                  <Button fx:id="ratingBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Rating" textFill="WHITE" />
+                  <Button fx:id="faqBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="FAQs" textFill="WHITE" />
+                  <Button fx:id="aboutBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="About developer" textFill="WHITE" />
+                  <Button fx:id="profileBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Profile" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Log out" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Exit" textFill="WHITE" />
+                  <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Log out" textFill="WHITE" />
+                  <Button fx:id="exitBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Exit" textFill="WHITE" />
                </children>
             </VBox>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="170.0" layoutY="59.0" prefHeight="339.0" prefWidth="368.0">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="USERNAME" textFill="WHITE">
+            <Label fx:id="usernameLabel" layoutX="14.0" layoutY="14.0" text="USERNAME" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
             <Line endX="100.0" layoutX="112.0" layoutY="41.0" startX="-100.0" stroke="WHITE" />
-            <Label layoutX="14.0" layoutY="57.0" text="Played games: %number%" textFill="WHITE">
+            <Label fx:id="playedGamesScore" layoutX="14.0" layoutY="57.0" text="Played games: %number%" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
             <Line endX="100.0" layoutX="115.0" layoutY="87.0" startX="-100.0" stroke="WHITE" />
-            <Label layoutX="17.0" layoutY="103.0" text="Created games: %number%" textFill="WHITE">
+            <Label fx:id="createdGamesScore" layoutX="17.0" layoutY="103.0" text="Created games: %number%" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
             <Line endX="100.0" layoutX="115.0" layoutY="132.0" startX="-100.0" stroke="WHITE" />
-            <Label layoutX="17.0" layoutY="148.0" text="The most popular game: %name%" textFill="WHITE">
+            <Label fx:id="mostPopularGame" layoutX="17.0" layoutY="148.0" text="The most popular game: %name%" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
@@ -84,10 +84,10 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <TextField layoutX="19.0" layoutY="211.0" promptText="Old password" />
-            <TextField layoutX="19.0" layoutY="251.0" promptText="New password" />
-            <TextField layoutX="19.0" layoutY="292.0" promptText="Repeat new password" />
-            <Button layoutX="184.0" layoutY="291.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: transparent; -fx-border-color: white;" text="Reset password" textFill="WHITE" />
+            <TextField fx:id="oldPasswordInput" layoutX="19.0" layoutY="211.0" promptText="Old password" />
+            <TextField fx:id="newPasswordInput" layoutX="19.0" layoutY="251.0" promptText="New password" />
+            <TextField fx:id="repeatPasswordInput" layoutX="19.0" layoutY="292.0" promptText="Repeat new password" />
+            <Button fx:id="resetBtn" layoutX="184.0" layoutY="291.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: transparent; -fx-border-color: white;" text="Reset password" textFill="WHITE" />
          </children>
       </AnchorPane>
    </children>
