--- a/src/sample/design/ratingPage.fxml
+++ b/src/sample/design/ratingPage.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="400" maxWidth="600" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="538.0" style="-fx-background-color: #347597;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="400" maxWidth="600" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="538.0" style="-fx-background-color: #347597;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.RatingController">
    <children>
       <AnchorPane prefHeight="59.0" prefWidth="539.0" style="-fx-background-color: #2B6887;">
          <effect>
             <DropShadow />
          </effect>
          <children>
-            <Label layoutX="192.0" layoutY="17.0" prefHeight="23.0" prefWidth="330.0" text="\%player.name% : %player.score%" textFill="WHITE">
+            <Label fx:id="nameAndScore" layoutX="192.0" layoutY="17.0" prefHeight="23.0" prefWidth="330.0" text="\%player.name% : %player.score%" textFill="WHITE">
                <font>
                   <Font name="Yu Gothic Medium" size="21.0" />
                </font>
@@ -38,17 +38,17 @@
             </ImageView>
             <VBox layoutX="2.0" layoutY="59.0" prefHeight="339.0" prefWidth="170.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Find a game" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Create a game" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Rating" textFill="WHITE">
+                  <Button fx:id="findBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Find a game" textFill="WHITE" />
+                  <Button fx:id="createBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Create a game" textFill="WHITE" />
+                  <Button fx:id="ratingBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Rating" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="FAQs" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="About developer" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Profile" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Log out" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Exit" textFill="WHITE" />
+                  <Button fx:id="faqBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="FAQs" textFill="WHITE" />
+                  <Button fx:id="aboutBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="About developer" textFill="WHITE" />
+                  <Button fx:id="profileBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Profile" textFill="WHITE" />
+                  <Button fx:id="logoutBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #275F7E; -fx-border-color: transparent; -fx-padding: 100%;" text="Log out" textFill="WHITE" />
+                  <Button fx:id="exitBtn" mnemonicParsing="false" prefHeight="42.0" prefWidth="172.0" style="-fx-background-color: #2B6887; -fx-border-color: transparent; -fx-padding: 100%;" text="Exit" textFill="WHITE" />
                </children>
             </VBox>
          </children>
@@ -69,13 +69,13 @@
             </Label>
             <TableView layoutX="1.0" layoutY="44.0" prefHeight="295.0" prefWidth="182.0">
               <columns>
-                <TableColumn prefWidth="91.99993896484375" text="Username" />
-                <TableColumn prefWidth="88.0" text="Rating" />
+                <TableColumn fx:id="usernameColumn" prefWidth="91.99993896484375" text="Username" />
+                <TableColumn fx:id="ratingColumn" prefWidth="88.0" text="Rating" />
               </columns>
             </TableView>
-            <TableView layoutX="183.0" layoutY="44.0" prefHeight="295.0" prefWidth="182.0">
+            <TableView fx:id="ratingGameColumn" layoutX="183.0" layoutY="44.0" prefHeight="295.0" prefWidth="182.0">
                <columns>
-                  <TableColumn prefWidth="91.99993896484375" text="Name" />
+                  <TableColumn fx:id="nameGameColumn" prefWidth="91.99993896484375" text="Name" />
                   <TableColumn prefWidth="88.79995727539062" text="Rating" />
                </columns>
             </TableView>
